Terminado com sucesso os  testes na rotas de canais
